# smePro

./: .gitignore  FRONTEND.md  MOBILE.md  README.md  RELEASE.md  build-installer.bat  build-installer.sh  index.html  mobile-android.sh  package-lock.json  package.json  run.bat  run.sh
.github/workflows/: release.yml
scripts/: setup.ps1  setup.sh
src/: App.tsx  api.ts  index.css  types.ts
src-tauri/: .env.example  BACKEND.md  Cargo.toml  schema.sql  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/modules/: accounting.json  debt_credit.json  hr.json  inventory.json  purchasing.json  sales.json
src-tauri/src/: ai_assistant.rs  ai_context.rs  audit.rs  auth.rs  business_panel.rs  crud.rs  db.rs  forecast.rs  http_api.rs  lib.rs  license.rs  main.rs  module.rs  notifications.rs  ocr_import.rs  onboarding.rs  payment.rs  rate_limit.rs  rbac.rs  reference_data.rs  report.rs  roles.rs  settings.rs  users.rs  vendor_license.rs  xlsx_export.rs
src/components/: AiFloatingButton.tsx  AndroidUpdateChecker.tsx  LicenseBanner.tsx  Sidebar.tsx  UpdateChecker.tsx
src/pages/: AdminPanel.tsx  FirstRunSetup.tsx  Login.tsx  ModuleView.tsx
vendor-authority/: Cargo.toml
vendor-authority/src/: main.rs
