[package]
name = "core_engine"
version = "0.1.1"
edition = "2021"
build = "build.rs"

[lib]
name = "core_engine"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "=0.31.0", features = ["sqlcipher"] }
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.128"
chrono = { version = "=0.4.38", features = ["serde"] }
anyhow = "=1.0.89"
uuid = { version = "=1.10.0", features = ["v4"] }
tiny_http = "=0.12.0"
argon2 = "=0.5.3"
rand_core = { version = "=0.6.4", features = ["getrandom"] }
rand = "=0.8.5"
rust_xlsxwriter = "=0.77.0"
ureq = { version = "=2.10.1", default-features = false, features = ["json", "tls"] }
base64 = "=0.22.1"
hmac = "=0.12.1"
sha2 = "=0.10.8"
hex = "=0.4.3"

[dependencies.base64ct]
version = "=1.6.0"

[dependencies.indexmap]
version = "=2.2.6"

[dependencies.idna_adapter]
version = "=1.0.0"

[dependencies.zeroize]
version = "=1.7.0"

[dependencies.tauri]
version = "2"
features = []

[dependencies.tauri-plugin-updater]
version = "2"

[dependencies.tauri-plugin-process]
version = "2"

[dependencies.tauri-plugin-fs]
version = "2"

[dependencies.tauri-plugin-http]
version = "2"

[dependencies.tauri-plugin-opener]
version = "2"

[dependencies.tauri-plugin-os]
version = "2"
